tests/src/frontend/syntax/invalid/invalid_object.sk

fun test(): void {
  A { 0 => 0 }
}
